# dateshift

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  NEWS.md  README.md  autogen.sh  configure  configure.ac  configure.in  dateshift.1  dateshift.c  dsintercept.c  run_tests.sh
.github/workflows/: dateshift-linux.yml  dateshift-macos.yml
config/: Makefile.am  Makefile.in
