dnl setup autotools
AC_INIT(dateshift.c)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(dateshift, 1.1)

dnl Setup libtool
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
dnl DOLT

# Build time sanity check...
AM_SANITY_CHECK

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Check for functons/declarations
AC_DEFINE(_GNU_SOURCE)
AC_TRY_COMPILE([#include <time.h>], [
	int gettimeofday(struct timeval *tv,struct timezone *tz);
], AC_DEFINE(GETTIMEOFDAY_HAS_TIMEZONE))

dnl Check for functons/declarations
AC_SEARCH_LIBS([clock_gettime],[c rt posix4]) 
AC_CHECK_FUNCS(clock_gettime)

if test $CC = "gcc"; then
	CFLAGS="-Wall $CFLAGS"
fi

dnl Output files
AC_OUTPUT([ Makefile config/Makefile ])
